objects/Renewal_Scenario__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associated_Platform_Edition__c</fullName>
        <label>Associated Platform Edition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>CPQ External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InstallBaseZscalerProductFamily__c</fullName>
        <description>To identity, it is ZIA, ZPA  Bundle upgrade. Always provide the product family of install base</description>
        <label>Install Base Zscaler Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ZscalerProductFamily</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installed_Base_Name__c</fullName>
        <label>Installed Base Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Renewed_To__c</fullName>
        <label>Name (Renewed To)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Renewal Scenarios</relationshipLabel>
        <relationshipName>Renewal_Scenarios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <label>Price List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY21 Federal Editions Price List</fullName>
                </value>
                <value>
                    <fullName>FY22 Single Tier Price List</fullName>
                </value>
                <value>
                    <fullName>FY21 Single Tier Price List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bundles Like to Like</fullName>
                </value>
                <value>
                    <fullName>Bundles Upgrade</fullName>
                </value>
                <value>
                    <fullName>Suites Like to Like</fullName>
                </value>
                <value>
                    <fullName>Suites Upgrade</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                    <isActive>false</isActive>
                    <label>Upgrade</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Renewal Scenario</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Renewal Scenario Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Renewal Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>